@@ -14,6 +14,10 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+07 November 2014 Vladimir Ivanchenko (hadr-util-V10-00-08)
+--------------------------------------------------------
+- G4HadSecondary - added creator
+
 30 October 2014 Vladimir Ivanchenko (hadr-util-V10-00-07)
 --------------------------------------------------------
 - G4HadFinalState, G4HadSecondary, G4ReactionProduct - added creator
